@@ -21,6 +21,7 @@
 			"vass_chrono_disturber":"graphics/vass/icons/hullsys/chrono_disturber.png",
 			"vass_isochronal_multilinker":"graphics/vass/icons/hullsys/isochronal_multilinker.png",
 			"perturba_hullmod":"graphics/vass/hullmods/perturba_hullmod.png",
+			"torpor_hullmod":"graphics/vass/hullmods/torpor_hullmod.png",
 		},
 		"intel": {
 			"vass_perturba_deal":"graphics/vass/icons/intel/perturba_deal.png"
