@@ -1,6 +1,7 @@
 mission,
 random_vs_vass,
 vass_vs_random,
+torpor_elites_vs_random,
 random_vs_perturba_elites,
 perturba_elites_vs_random,
 vass_test,
