@@ -1,0 +1,6 @@
+{
+	"title":"Torpor Elites vs. Random",
+	"difficulty":"Varying",
+	"icon":"icon.jpg",
+	"background":"graphics/backgrounds/background4.jpg",
+}
