@@ -1,0 +1,1 @@
+A randomly generated mission where a fleet of Torpor elites face off against random forces
