@@ -1,3 +1,4 @@
 faction
 data/world/factions/vass.faction
+data/world/factions/vass_torpor.faction
 data/world/factions/vass_perturba.faction
