@@ -1,0 +1,24 @@
+package data.missions.torpor_elites_vs_random;
+
+import com.fs.starfarer.api.mission.MissionDefinitionAPI;
+import data.missions.VassBaseRandomMissionDefinition;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class MissionDefinition extends VassBaseRandomMissionDefinition
+{
+	@Override
+	public void defineMission(MissionDefinitionAPI api)
+	{
+		chooseFactions("vass_torpor", null);
+		super.defineMission(api);
+	}
+
+	@Override
+	protected List<String> getForcedPlayerHullmods() {
+		List<String> hullmods = new ArrayList<>();
+		hullmods.add("vass_dummymod_torpor_membership");
+		return hullmods;
+	}
+}
